[mobile] fix search button on firefox again

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -129,6 +129,9 @@ h3 {
     border: 1px solid transparent;
     background: transparent;
     border: none;
+}
+
+.search-icon [type="button"] {
     -webkit-appearance: none;
 }
 
